--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^6.10.1"
   },
